<resources>
    <string name="app_name">WordGame</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="help">help</string>
    <string name="about_wordgame">About WordGame</string>
    <string name="instructions">Instructions</string>
    <string name="level_three">Level Three</string>
    <string name="level_two">Level Two</string>
    <string name="level_one">Level one</string>
    <string name="play">Play</string>
    <string name="learn">Learn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_line"> &amp;#10</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heading">HEADING</string>
    <string name="multiple_choice">MULTIPLE CHOICE</string>
    <string name="true_or_false">TRUE or FALSE</string>
    <string name="matching">MATCHING</string>
    <string name="translate">TRANSLATE</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="_30">30%</string>
    <string name="home">home</string>
    <string name="progress">Progress</string>
    <string name="your_progress_report">Your progress report</string>
    <string name="avg_grade">Avg grade</string>
    <string name="learning"><![CDATA[Learning >>]]></string>
    <string name="submit">submit</string>
    <string name="english_word_or_phrase">English word or Phrase</string>
    <string name="answer2">answer2</string>
    <string name="answer1">answer1</string>
    <string name="answer3">answer3</string>
    <string name="answer4">answer4</string>
    <string name="_1">1</string>
    <string name="pagenumber">pageNumber</string>
    <string name="False">false</string>
    <string name="True">true</string>
    <string name="no_of_hints_10">No of hints: 10</string>
    <string name="enter_a_xhosa_translation">Enter a Xhosa translation</string>
    <string name="hint">hint</string>
    <string name="type_translation">Type translation</string>
    <string name="avg_score">Avg score</string>
    <string name="results">Results</string>
    <string name="level_one_results">Level One results >></string>
    <string name="level_two_results">Level Two results >></string>
    <string name="level_three_results">Level Three results >></string>
    <string name="word_game_header">Word Game Header</string>
    <string name="you_almost_there_keep_trying">You Almost there, keep trying!!</string>
    <string name="average_results">Average results >></string>
    <string name="word_game">Word Game</string>
    <string name="nav_open_drawer">open navigation drawer</string>
    <string name="nav_close_drawer">close navigation drawer</string>
</resources>