<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="always|withText"

        />
    <item
        android:id="@+id/aboutApp"
        android:title="@string/about_wordgame"
        />
    <item
        android:id="@+id/resultsId"
        android:visible="false"
        android:title="@string/results"
        />
    <item
        android:id="@+id/instructions"
        android:title="@string/instructions"/>
    <item
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:id="@+id/search"
        app:actionViewClass="android.widget.SearchView"
        android:visible="false"/>

</menu>