<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultipleChoiceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="290dp"
            android:layout_height="248dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="61dp"
            android:background="#58BDB4"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="410dp"
            android:layout_height="239dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView">

            <LinearLayout
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/answer1textView"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:background="#9D92CF"
                    android:gravity="center"
                    android:text="@string/answer1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/answer2TextView"
                    android:layout_width="match_parent"
                    android:layout_height="126dp"
                    android:background="#9D92CF"
                    android:gravity="center"
                    android:text="@string/answer2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/answer3textView"
                    android:layout_width="match_parent"
                    android:layout_height="114dp"
                    android:layout_gravity="center"
                    android:background="#9D92CF"
                    android:gravity="center"
                    android:text="@string/answer3"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/answer4TextView"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:background="#9D92CF"
                    android:gravity="center"
                    android:text="@string/answer4"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>