<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MultipleChoiceFragment">

    <TextView
        android:id="@+id/transQuestionTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"

        android:gravity="center"
        android:text="@string/english_word_or_phrase"
        android:textSize="20sp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@id/guideline27"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer2TextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:contextClickable="true"
        android:clickable="true"
        android:text="@string/answer2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline23"
        app:layout_constraintEnd_toStartOf="@id/guideline26"
        app:layout_constraintStart_toEndOf="@id/guideline24"
        app:layout_constraintTop_toBottomOf="@id/guideline22" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer1textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_marginEnd="5dp"

        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/answer1"
        android:textSize="20sp"
        android:contextClickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@id/guideline22"
        app:layout_constraintEnd_toStartOf="@id/guideline24"
        app:layout_constraintStart_toEndOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/guideline21" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer3textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_marginStart="5dp"

        android:gravity="center"
        android:text="@string/answer3"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:contextClickable="true"
        app:layout_constraintBottom_toTopOf="@id/guideline22"
        app:layout_constraintEnd_toStartOf="@id/guideline26"
        app:layout_constraintStart_toEndOf="@id/guideline24"
        app:layout_constraintTop_toBottomOf="@id/guideline21" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/answer4TextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:layout_marginEnd="5dp"

        android:gravity="center"
        android:text="@string/answer4"
        android:textSize="20sp"
        android:clickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:contextClickable="true"
        app:layout_constraintBottom_toTopOf="@id/guideline23"
        app:layout_constraintEnd_toStartOf="@id/guideline24"
        app:layout_constraintStart_toEndOf="@id/guideline25"
        app:layout_constraintTop_toBottomOf="@id/guideline22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39"/>
</androidx.constraintlayout.widget.ConstraintLayout>